# commonactors

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/commonactors/: __init__.py  __main__.py  actors.py  cli.py
tests/: test_actors.py  test_api.py  test_cli.py
