[project]
name = "commonactors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bob Belderbos", email = "bobbelderbos@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-decouple>=3.8",
    "typer>=0.16.0",
]

[project.scripts]
commonactors = "commonactors.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ty>=0.0.1a7",
]

[tool.poe.tasks]
test = "pytest"
cov = "pytest --cov=commonactors --cov-report=term-missing"
lint = "ruff check ."
format = "ruff format ."
tc = "ty check ."

[tool.coverage.run]
omit = [
    "src/commonactors/__init__.py",
    "src/commonactors/__main__.py"
]
